<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingTop="8dp">
        <EditText
            android:id="@+id/gifGrid_searchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/gif_search_hint"/>
        <ImageButton
            android:id="@+id/gifGrid_search_button"
            android:padding="4dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/right_arrow"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/giphy_powered"
        android:textSize="15sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/gifGrid_sticker_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stickers"
            android:background="@android:color/transparent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"/>
        <Button
            android:id="@+id/gifGrid_gif_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gifs"
            android:background="@android:color/transparent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"/>
    </LinearLayout>
    <GridView
        android:id="@+id/gridView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:verticalSpacing="16dp"
        android:numColumns="2"
        android:stretchMode="columnWidth"

        >
    </GridView>
</LinearLayout>
