<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:background="@color/indigo"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/textAdd_header"
            android:textSize="36sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@android:color/darker_gray"
        >
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint"
            android:gravity="top"

            />
        <Button
            android:id="@+id/addText_confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"/>
        <Button
            android:id="@+id/addText_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"/>
    </FrameLayout>


</LinearLayout>